# Cstudy

./: .gitignore  CMakeLists.txt  Data.c  README.md
24年暑假写的/: Bubble.c  Calculate.c  Dec_to_Hex.c  Height.c  Hex_to_Dec_Remake.c  Number_Mixer.c  PrimeNumber.c  Salary.c  Time_Adder.c  Time_Now.c  X_is_WHAT.c  enum.c  func_repo.c  func_repo.h  randomArray.c  switch.c
一些神奇的想法/: 37Sum.c  ArrayBisection.c  Battery.c  BinSearch.c  CutOut.c  DNA.c  Factorial.c  Fibonacci.c  HappyNumber.c  List.c  Marks.c  MaxInteger.c  NumberMixer.c  Physics.c  PhysicsDebug.c  Pointer.c  Queens.c  Reverse.c  WutheringWaves.c  aaabbb.c
学校上课写的/1.FirstProgram/: HelloWorld.c
学校上课写的/10.计导的排序算法/: Bubble.c  Bubble.py  QuickSort.py  quickSort.c
学校上课写的/11.HomeWork_7/: AnPoint.c  Analyse.c  FindStr.c  StrSort.c
学校上课写的/13.计导的人体快排/: 伪汇编.asm
学校上课写的/14.HomeWork_8/: Analyse.c  Legendre.c  Legendre_2.c  LongestWord.c  Marks.c  legendre_3.c
学校上课写的/15.HomeWork_9/: AllDays.c  Analyse.c  Lottery.c
学校上课写的/16.HomeWork_10/: JosephRing_Basic.c  JosephRing_Best.c  JosephRing_StructVersion.c  Reverse_1.c  Reverse_2.c
学校上课写的/17.HomeWork_11/: Integral.c  Integral_1.c  Integral_2.c  Marks_2.c  SplitNumber.c
学校上课写的/18.HomeWork_12/: AllDays_2.c  Marks_3.c
学校上课写的/19.C语言程序设计任务/: DuplicateChecking.c
学校上课写的/2.HomeWork_1/: MaxNumber_1.c  MaxNumber_2.c  MaxNumber_3.c
学校上课写的/20.HomeWork_13/: Analyse.c  Marks_4.c  PhoneSales.c
学校上课写的/21.HomeWork_14/: Diary.c  Vote.c
学校上课写的/3.HomeWork_2/: Decryption.c  Encryption.c
学校上课写的/4.HomeWork_3/: Circle.c  Height.c  LeapYear.c
学校上课写的/5.HomeWork_4/: Bonus.c  (+2 more)
(+23 files in other folders)
