cmake_minimum_required(VERSION 3.29)
project(CStudy C)

set(CMAKE_C_STANDARD 11)

add_library(CStudy
        学校上课写的/2.HomeWork_1/MaxNumber_1.c
        学校上课写的/2.HomeWork_1/MaxNumber_2.c
        学校上课写的/2.HomeWork_1/MaxNumber_3.c
        学校上课写的/1.FirstProgram/HelloWorld.c
        一些神奇的想法/Pointer.c
        学校上课写的/3.HomeWork_2/Decryption.c
        学校上课写的/4.HomeWork_3/Circle.c
        学校上课写的/4.HomeWork_3/Height.c
        学校上课写的/4.HomeWork_3/LeapYear.c
        24年暑假写的/Bubble.c
        24年暑假写的/Calculate.c
        24年暑假写的/Dec_to_Hex.c
        24年暑假写的/Hex_to_Dec_Remake.c
        学校上课写的/9.HomeWork_6/Bubble.c
        学校上课写的/9.HomeWork_6/Selection.c
        学校上课写的/9.HomeWork_6/Insert.c)
